# note

CSV_reader.bak/: CMakeLists.txt  CSV_Reader.cpp  GPSData.txt  LatLong-UTM.cpp  get_data_from_log.cpp  mydata.h  reader.cpp  test.cpp  utm.cpp
CSV_reader.bak/inc/: CSV_Reader.hpp  reader.h
caffe/blob/: .note.swp
cmake/: c与c++混编问题
linux/convert/: convert基本用法
openCV/: ConvertImageFromFolder.cpp  Histogram.cpp
openMVG/: getPose_and_prior_pose.cpp
posenet/: Makefile.config.note
read_ValidData/: ValidData.txt  split.cpp
readdir/: readdir  scandir.cpp
sfm/: colmap_process  namespace  openMVG_usage
图像原理/: MSER
